@@ -528,6 +528,7 @@ typedef struct {
 #ifdef USE_SDL
   byte *modescreen_ptr;			/* Mode screen pointer */
   uint32 modescreen_sz;			/* Mode screen size */
+  uint32 mode7fb;			/* Start of MODE 7 frame buffer space */
 #endif
 } matrixbits;
 extern matrixbits matrixflags;
