@@ -9,6 +9,9 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Integer multiplication follows new code path at all times, old int-only
   implementation didn't match any Acorn BBC BASIC version and is thus a bug.
 - Fixed stack pointer leak bug.
+- Fixed behaviour setting HIMEM immediately after LOADing a file
+- MODE 7 video memory can move - if size is <= 31K (HIMEM=&7C00) then the
+  MODE 7 frame buffer relocates to &7C00, otherwise it remains at &FFFF7C00.
 
 * V1.22.0 - 23 July 2019
 - Change identifier to BASIC VI (which is BASIC V with 64-bit FP maths, which
